--- a/websoc.html
+++ b/websoc.html
@@ -1,4 +1,15 @@
+<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 <body>
-
+  <div class="container text-center">
+    <div class="display-4 mt-3">
+      Web Piano Visualiser
+    </div>
+    <div class="">
+      A Colourful Piano Map Displayer
+    </div>
+    <hr style="border-bottom:solid 5px #187;">
+  </div>
 </body>
 <script src="static/js/websoc.js" charset="utf-8"></script>
+<script src="node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
