--- a/websoc.html
+++ b/websoc.html
@@ -1,13 +1,17 @@
 <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 <body>
   <div class="container text-center">
-    <div class="display-4 mt-3">
+    <div class="display-4 mt-3 mb-1">
       Web Piano Visualiser
     </div>
-    <div class="">
+    <div class="h6">
       A Colourful Piano Map Displayer
     </div>
     <hr style="border-bottom:solid 5px #187;">
+
+    <div class="" id="status-container">
+      Connecting...
+    </div>
   </div>
 </body>
 <script src="static/js/websoc.js" charset="utf-8"></script>
