Add input select container

--- a/websoc.html
+++ b/websoc.html
@@ -12,6 +12,13 @@
     <div class="" id="status-container">
       Connecting...
     </div>
+
+    <div class="form-group d-flex justify-content-center" id="input-dev-container">
+      <select class="form-control mx-1" style="width:200px" id="input-dev-list">
+        <option value="item-1">Input 1</option>
+      </select>
+      <button class="mx-1" type="button" name="button">Use</button>
+    </div>
   </div>
 </body>
 <script src="static/js/websoc.js" charset="utf-8"></script>
