--- a/websoc.html
+++ b/websoc.html
@@ -14,8 +14,8 @@
     </div>
 
     <div class="form-group d-flex justify-content-center" id="input-dev-container">
-      <select class="form-control mx-1" style="width:200px" id="input-dev-list">
-        <option value="item-1" onclick="setInputDev(0)">Input 1</option>
+      <select class="form-control mx-1" style="width:600px" id="input-dev-list">
+        <option value="item-1" onclick="setInputDev(0)">Waiting for connections...</option>
       </select>
       <button class="mx-1" type="button" name="button" id="start-streaming-button">
         Start Streaming Input
