--- a/websoc.html
+++ b/websoc.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="form-group d-flex justify-content-center" id="input-dev-container">
-      <select class="form-control mx-1" style="width:600px" id="input-dev-list">
+      <select class="form-control mx-1" style="width:600px" id="input-dev-list" disabled>
         <option value="item-1" onclick="setInputDev(0)">Waiting for connections...</option>
       </select>
       <button class="mx-1" type="button" name="button" id="start-streaming-button">
