--- a/websoc.html
+++ b/websoc.html
@@ -17,7 +17,7 @@
       <select class="form-control mx-1" style="width:600px" id="input-dev-list" disabled>
         <option value="item-1" onclick="setInputDev(0)">Waiting for connections...</option>
       </select>
-      <button class="mx-1" type="button" name="button" id="start-streaming-button">
+      <button class="mx-1" type="button" name="button" id="streaming-button" onclick="streamButton()">
         Start Streaming Input
       </button>
     </div>
