--- a/websoc.html
+++ b/websoc.html
@@ -21,6 +21,8 @@
         Start Streaming Input
       </button>
     </div>
+
+    <canvas id="piano-map-canvas" width="100%" height="40%"></canvas>
   </div>
 </body>
 <script src="node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
